--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
 /* body { 
     background-color: #212529; 
 } */
+#profile-content {
+    text-align: center;
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 3%; 
+}
+
+#profile-pic {
+    border-radius: 15%;
+    max-width: 25%;
+    max-height: 25%;
+    margin-bottom: 3%;
+}
+
+#intro {
+    font-size: 3rem;
+}
+
+#bio {
+    font-size: 1rem;
+}
