--- a/style.css
+++ b/style.css
@@ -23,3 +23,13 @@
 #bio {
     font-size: 1rem;
 }
+
+#social-media li {
+    list-style: none;
+    display: inline;
+}
+
+#social-media li img {
+    width: 2rem;
+    margin: 1.5%;
+}
